Got a SSN number (69). Changed document title.

--- a/applications/obsolete/ccdbig/ssn69.tex
+++ b/applications/obsolete/ccdbig/ssn69.tex
@@ -6,9 +6,9 @@
 \newcommand{\stardoccategory}  {Starlink System Note}
 \newcommand{\stardocinitials}  {SSN}
 \newcommand{\stardocsource}    {ssn\stardocnumber}
-\newcommand{\stardocnumber}    {[number].[version]}
+\newcommand{\stardocnumber}    {69.1}
 \newcommand{\stardocauthors}   {Mark Taylor}
-\newcommand{\stardocdate}      {27 May 1998}
+\newcommand{\stardocdate}      {9 June 1998}
 \newcommand{\stardoctitle}     {
    CCDBIG: benchmarking CCDPACK for large data sets
 }
