ast: New FitsCHan attributes CardComma and CardName
Not sure why I've never added these before now...

--- a/libraries/ast/sun_master.tex
+++ b/libraries/ast/sun_master.tex
@@ -22903,6 +22903,9 @@ current version):
 
 \begin{enumerate}
 
+\item The FitsChan class has new attributes CardName and CardComm, which hold
+the keyword name and comment of the current card.
+
 \item When using the FitsChan class to read FITS-WCS headers that include
 polynomial distortion in the SIP format, any inverse transformation specified
 in the header is now ignored and a new inverse is created to replace it based
