cupid: Only prompt for RMS if it is not in the config

--- a/applications/cupid/sun_master.tex
+++ b/applications/cupid/sun_master.tex
@@ -15,10 +15,10 @@
 \newcommand{\stardocsource}    {sun\stardocnumber}
 \newcommand{\stardocnumber}    {255.1}
 \newcommand{\stardocauthors}   {D.S. Berry}
-\newcommand{\stardocdate}      {6th March 2009}
+\newcommand{\stardocdate}      {20th November 2013}
 \newcommand{\stardoctitle}     {CUPID}
 \newcommand{\stardoconeline}   {A 3D Clump Identification and Analysis Package}
-\newcommand{\stardocversion}   {Version 0.0-38}
+\newcommand{\stardocversion}   {Version 2.0}
 \newcommand{\stardocmanual}    {Users' Manual}
 \newcommand{\stardocabstract}  {CUPID is a package of the identification
 and analysis of clumps of emission within 1-, 2- and 3- dimensional
