psx: Fix author list on SUN/121 and increment doc number

--- a/libraries/psx/sun121.tex
+++ b/libraries/psx/sun121.tex
@@ -17,9 +17,10 @@
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils, 2006 Particle Physics and Astronomy Research Council}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {121.5}
+\newcommand{\stardocnumber}    {121.6}
 \newcommand{\stardocauthors}   {P M Allan\\
-                                A J Chipperfield}
+                                A J Chipperfield\\ T Jenness\\
+                                David S Berry}
 \newcommand{\stardocdate}      {8th November 2007}
 \newcommand{\stardoctitle}     {PSX \\ [1ex]
                                 POSIX interface routines}
