jcmtdr: Correct author list

--- a/applications/obsolete/jcmtdr/docs/sun132/sun132.tex
+++ b/applications/obsolete/jcmtdr/docs/sun132/sun132.tex
@@ -33,7 +33,7 @@
 \newcommand{\stardocsource}    {sun\stardocnumber}
 \newcommand{\stardocnumber}    {132.3}
 \newcommand{\stardocauthors}
-   {J F Lightfoot, P A Harrison, H Meyerdierks}
+   {J F Lightfoot, P A Harrison, H Meyerdierks, T Jenness}
 \newcommand{\stardocdate}      {20 March 2003}
 \newcommand{\stardoctitle}     {JCMTDR \\[2ex] Applications for Reducing JCMT GSD Data}
 \newcommand{\stardoccopyright} {Copyright \copyright\ 1989-2003 Particle Physics and Astronomy Research Council}
