cat: Increment release number of SUN/181

--- a/libraries/cat/sun181.tex
+++ b/libraries/cat/sun181.tex
@@ -46,8 +46,8 @@
 \newcommand{\stardoccopyright}
 {Copyright \copyright\ 2001 Council for the Central Laboratory of the Research Councils}
 
-\newcommand{\stardocnumber}    {181.10}
-\newcommand{\stardocauthors}   {A.C.~Davenhall}
+\newcommand{\stardocnumber}    {181.11}
+\newcommand{\stardocauthors}   {A.C.~Davenhall \& D.S.~Berry}
 \newcommand{\stardocdate}      {11th November 2013}
 \newcommand{\stardoctitle}     {CAT \\ [\latex{1ex}]
                               Catalogue and Table Manipulation Library}
