cnf: Update author list and release number of SUN

--- a/libraries/cnf/sun209.tex
+++ b/libraries/cnf/sun209.tex
@@ -15,12 +15,13 @@
 \newcommand{\stardocsource}    {sun\stardocnumber}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {209.10}
+\newcommand{\stardocnumber}    {209.11}
 \newcommand{\stardocauthors}   {P.M.\ Allan\\
                                 A.J.\ Chipperfield\\
                                 R.F.\ Warren-Smith\\
-                                P.W.\ Draper}
-\newcommand{\stardocdate}      {18 April 2008}
+                                P.W.\ Draper\\
+                                D.S.\ Berry}
+\newcommand{\stardocdate}      {12 May 2011}
 \newcommand{\stardoctitle}     {CNF and F77 \\ [1ex]
                                 Mixed Language Programming -- FORTRAN and C}
 \newcommand{\stardocversion}   {Version 4.3}
